Fixed bug #43912 (Interbase column names are truncated to 31 characters)